# orchestrator-shell

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  main.py  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: publish-package.yaml  run-linting-tests.yml  uv-lock-report.yml
orchestrator/shell/: __init__.py  main.py  process.py  product_block.py  resource_type.py  state.py  subscripition.py
orchestrator_shell/: __init__.py  main.py  process.py  product_block.py  resource_type.py  settings.py  state.py  subscripition.py
requirements/: base.txt  dev.txt
wfoshell/: __init__.py  __main__.py  product_block.py  resource_type.py  settings.py  state.py  subscripition.py
